--- a/.github/workflows/ci-and-pack.yml
+++ b/.github/workflows/ci-and-pack.yml
@@ -19,7 +19,6 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: "10.0.x"
-          include-prerelease: true
 
       - name: Restore
         run: dotnet restore
@@ -65,10 +64,17 @@ jobs:
 
       - name: Add GitHub Packages source
         run: dotnet nuget add source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
-             --name github \
-             --username "${{ github.actor }}" \
-             --password "${{ secrets.GITHUB_TOKEN }}" \
-             --store-password-in-clear-text
+          --name github \
+          --username "${{ github.actor }}" \
+          --password "${{ secrets.GITHUB_TOKEN }}" \
+          --store-password-in-clear-text
 
       - name: Push to GitHub Packages
         run: dotnet nuget push "artifacts/*.nupkg" --source github --api-key "${{ secrets.GITHUB_TOKEN }}" --skip-duplicate
+
+      # --- NEW: Push to NuGet.org ---
+      - name: Push to NuGet.org
+        run: dotnet nuget push "artifacts/teconas.Vulcan.*.nupkg" \
+          --source "https://api.nuget.org/v3/index.json" \
+          --api-key "${{ secrets.NUGET_API_KEY }}" \
+          --skip-duplicate
