--- a/Vulcan/Vulcan.csproj
+++ b/Vulcan/Vulcan.csproj
@@ -4,8 +4,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
-        <TargetFramework>netstandard2.0</TargetFramework>
         <IsPackable>true</IsPackable>        
+        <TargetFrameworks>netstandard2.0;net10.0</TargetFrameworks>        
     </PropertyGroup>
     
     <PropertyGroup>
