--- a/.github/workflows/ci-and-pack.yml
+++ b/.github/workflows/ci-and-pack.yml
@@ -4,14 +4,13 @@ on:
   push:
     branches: [ master, dev ]
     tags:
-      - "v.*.*.*"
+      - "v*.*.*"
   pull_request:
     branches: [ master, dev ]
   workflow_dispatch:
 
 jobs:
   build_test:
-    if: startsWith(github.ref, 'refs/heads/')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +29,8 @@ jobs:
         run: dotnet test -c Release --no-build
 
   pack_publish_github_packages:
-    if: startsWith(github.ref, 'refs/tags/v.')
+    needs: build_test
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -41,40 +41,30 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: "10.0.x"
-          include-prerelease: true
 
-      - name: Compute version from tag (v.0.1.1 -> 0.1.1)
+      - name: Compute version from tag (v0.1.1 -> 0.1.1)
         shell: bash
         run: |
           VERSION="${GITHUB_REF_NAME#v}"
-          VERSION="${VERSION#.}"
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Restore
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build -c Release --no-restore
-
-      - name: Test
-        run: dotnet test -c Release --no-build
-
+          
       - name: Pack
-        run: dotnet pack -c Release -o artifacts --no-build -p:Version=${{ env.VERSION }}
+        run: dotnet pack -c Release -o artifacts -p:Version=${{ env.VERSION }} -p:PackageVersion=${{ env.VERSION }}
 
       - name: Add GitHub Packages source
-        run: dotnet nuget add source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
+        run: |
+          dotnet nuget add source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
           --name github \
           --username "${{ github.actor }}" \
           --password "${{ secrets.GITHUB_TOKEN }}" \
           --store-password-in-clear-text
 
       - name: Push to GitHub Packages
-        run: dotnet nuget push "artifacts/*.nupkg" --source github --api-key "${{ secrets.GITHUB_TOKEN }}" --skip-duplicate
+        run: dotnet nuget push artifacts/*.nupkg --source github --api-key "${{ secrets.GITHUB_TOKEN }}" --skip-duplicate
 
-      # --- NEW: Push to NuGet.org ---
       - name: Push to NuGet.org
-        run: dotnet nuget push "artifacts/teconas.Vulcan.*.nupkg" \
-          --source "https://api.nuget.org/v3/index.json" \
+        run: |
+          dotnet nuget push artifacts/teconas.Vulcan.*.nupkg \
+          --source https://api.nuget.org/v3/index.json \
           --api-key "${{ secrets.NUGET_API_KEY }}" \
           --skip-duplicate
