--- a/Vulcan/Vulcan.csproj
+++ b/Vulcan/Vulcan.csproj
@@ -25,8 +25,7 @@
     <!-- Nuget Packages Include -->
     <ItemGroup>
         <PackageReference Include="JetBrains.Annotations" Version="2025.2.4"/>
-        <PackageReference Include="PolySharp" Version="1.15.0">
-            <PrivateAssets>all</PrivateAssets>
+        <PackageReference Include="PolySharp" Version="1.15.0" PrivateAssets="all" >
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
