--- a/Vulcan/Vulcan.csproj
+++ b/Vulcan/Vulcan.csproj
@@ -35,5 +35,10 @@
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
         <None Include="icon.png" Pack="true" PackagePath="\"/>
     </ItemGroup>
+    <ItemGroup>
+      <Content Include="..\README.md">
+        <Link>README.md</Link>
+      </Content>
+    </ItemGroup>
 
 </Project>
